# doorpy

./: .gitignore  README.md  citofono-voip.py  citofono-voip.service  config.env.example  install.sh  pyproject.toml  requirements.txt  spiegazioni.txt  test_audio.sh  test_portone.py  test_suoneria.py
config/: config.yaml
doorpy/: __init__.py  config.py  controller.py  display.py  telephony.py  utils.py  webapp.py
